...
                android:background="?attr/selectableItemBackground"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        </LinearLayout>

        <ListView
            android:id="@+id/guides_listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/download_guides_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/search_linearLayout"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible" />
...
