...
            android:textSize="16sp"
            tools:text="Some guide descripti" />

    </LinearLayout>

    <ImageView
        android:id="@+id/downloadImageView"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:alpha=".5"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
...
