...
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_guides"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="Troubleshooting and Repair" />
        <item
            android:id="@+id/nav_repair_history"
            android:icon = "@drawable/ic_history_black_24dp"
            android:title = "@string/repair_history" />
        <item
            android:id="@+id/contact_an_expert"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/contact_an_expert" />
...
